# B2-C

./: .gitignore  CaculliTyranowski.c  CaculliTyranowski.tex  Makefile.am  README.md  configure.ac
data/: info.txt
doc/: #CaculliTyranowski.tex#  .#CaculliTyranowski.tex  CaculliTyranowski.aux  CaculliTyranowski.glg  CaculliTyranowski.glo  CaculliTyranowski.gls  CaculliTyranowski.ist  CaculliTyranowski.tex  CaculliTyranowski.toc  nom_prenom.txt  test.c
src/: CaculliTyranowski.c  CaculliTyranowski.h  main.c  main.h
