bin_PROGRAMS = CaculliTyranowski

CaculliTyranowski_SOURCES = \
    src/CaculliTyranowski.c src/CaculliTyranowski.h

CaculliTyranowski_CFLAGS =
CaculliTyranowski_CFLAGS += -W
CaculliTyranowski_CFLAGS += -Wall
CaculliTyranowski_CFLAGS += -Wextra
#CaculliTyranowski_CFLAGS += -Werror
CaculliTyranowski_CFLAGS += -std=c99
CaculliTyranowski_CFLAGS += -pipe
